fix: spacing for icon-label

--- a/src/utils/QuizIconCategory.module.css
+++ b/src/utils/QuizIconCategory.module.css
@@ -51,6 +51,7 @@
 
 @media screen and (min-width: 768px) {
   .container {
+    gap: 2rem;
     .img_container {
 
       height: 3.5rem;
